include/ishtar.rs

pub const ishtar_opcode_e_OPCODE_JMP_H: ishtar_opcode_e = 100;
pub const ishtar_opcode_e_OPCODE_JMP_NQ: ishtar_opcode_e = 101;
pub const ishtar_opcode_e_OPCODE_JMP_NN: ishtar_opcode_e = 102;
pub const ishtar_opcode_e_OPCODE_JMP_F: ishtar_opcode_e = 103;
pub const ishtar_opcode_e_OPCODE_JMP_T: ishtar_opcode_e = 104;
pub const ishtar_opcode_e_OPCODE_POP: ishtar_opcode_e = 105;
pub const ishtar_opcode_e_OPCODE_ALLOC_BLOCK: ishtar_opcode_e = 106;
pub const ishtar_opcode_e_OPCODE_DELETE: ishtar_opcode_e = 107;
pub const ishtar_opcode_e_OPCODE_SEH_LEAVE_S: ishtar_opcode_e = 108;
pub const ishtar_opcode_e_OPCODE_SEH_LEAVE: ishtar_opcode_e = 109;
pub const ishtar_opcode_e_OPCODE_SEH_FINALLY: ishtar_opcode_e = 110;
pub const ishtar_opcode_e_OPCODE_SEH_FILTER: ishtar_opcode_e = 111;
pub const ishtar_opcode_e_OPCODE_SEH_ENTER: ishtar_opcode_e = 112;
pub const ishtar_opcode_e_OPCODE_CAST: ishtar_opcode_e = 113;
pub const ishtar_opcode_e_OPCODE_CALL_SP: ishtar_opcode_e = 114;
pub const ishtar_opcode_e_OPCODE_LDFN: ishtar_opcode_e = 115;
pub const ishtar_opcode_e_OPCODE_LD_TYPE_G: ishtar_opcode_e = 116;
pub type ishtar_opcode_e = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_version_t {
    pub major: u32,
    pub minor: u32,
    pub patch: u32,
    pub build: u32,
}
#[test]
fn bindgen_test_layout_ishtar_version_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_version_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_version_t>(),
        16usize,
        concat!("Size of: ", stringify!(ishtar_version_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_version_t>(),
        4usize,
        concat!("Alignment of ", stringify!(ishtar_version_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).major) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_version_t),
            "::",
            stringify!(major)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minor) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_version_t),
            "::",
            stringify!(minor)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_version_t),
            "::",
            stringify!(patch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).build) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_version_t),
            "::",
            stringify!(build)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_array_block_t {
    pub offset_value: u64,
    pub offset_block: u64,
    pub offset_rank: u64,
    pub offset_size: u64,
}
#[test]
fn bindgen_test_layout_ishtar_array_block_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_array_block_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_array_block_t>(),
        32usize,
        concat!("Size of: ", stringify!(ishtar_array_block_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_array_block_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_array_block_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offset_value) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_block_t),
            "::",
            stringify!(offset_value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offset_block) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_block_t),
            "::",
            stringify!(offset_block)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offset_rank) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_block_t),
            "::",
            stringify!(offset_rank)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).offset_size) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_block_t),
            "::",
            stringify!(offset_size)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_array_t {
    pub clazz: *mut ishtar_class_t,
    pub memory: *mut ishtar_object_t,
    pub flags: gc_flags_t,
    pub vtable_size: u32,
    pub owner: *mut ::std::os::raw::c_void,
    pub __gc_id: i64,
    pub element_clazz: *mut ishtar_class_t,
    pub _block: ishtar_array_block_t,
}
#[test]
fn bindgen_test_layout_ishtar_array_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_array_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_array_t>(),
        80usize,
        concat!("Size of: ", stringify!(ishtar_array_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_array_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_array_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clazz) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(clazz)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).memory) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(memory)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable_size) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(vtable_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).__gc_id) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(__gc_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).element_clazz) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(element_clazz)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._block) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_array_t),
            "::",
            stringify!(_block)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_frames_t {
    pub module_loader_frame: *mut call_frame_t,
    pub entry_point: *mut call_frame_t,
    pub jit: *mut call_frame_t,
    pub garbage_collector: *mut call_frame_t,
    pub native_loader: *mut call_frame_t,
}
#[test]
fn bindgen_test_layout_ishtar_frames_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_frames_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_frames_t>(),
        40usize,
        concat!("Size of: ", stringify!(ishtar_frames_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_frames_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_frames_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).module_loader_frame) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_frames_t),
            "::",
            stringify!(module_loader_frame)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry_point) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_frames_t),
            "::",
            stringify!(entry_point)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).jit) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_frames_t),
            "::",
            stringify!(jit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).garbage_collector) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_frames_t),
            "::",
            stringify!(garbage_collector)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).native_loader) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_frames_t),
            "::",
            stringify!(native_loader)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_object_t {
    pub clazz: *mut ishtar_class_t,
    pub vtable: *mut ::std::os::raw::c_void,
    pub flags: gc_flags_t,
    pub color: gc_color_t,
    pub refs_size: u64,
    pub vtable_size: u32,
    pub __gc_id: i64,
    pub m1: i64,
    pub m2: i64,
}
